<resources>
    <string name="app_name">AppFlowTask01</string>
    <string name="correo">Correo Electronico</string>
    <string name="contraseniaa">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegistrar">Registrarse</string>

    <string name="registro">Registro</string>

    <string name="inicio">Inicio</string>
    <string name="Agregar">Agregar</string>
    <string name="buscar">Buscar</string>

    <string name="agRamo">Agregar Ramo</string>
    <string name="Ramo">Ramo</string>
    <string name="tarea">Tarea / Evaluacion</string>
    <string name="rutina">Rutina</string>
    <string name="Proyecto">Proyecto</string>

    <string name="nmRamo">Nombre Ramo</string>
    <string name="scRamo">Seccion</string>
    <string name="prRamo">Nombre Profesor</string>
    <string name="Tipo">Tipo</string>

    <string name="agtarea">Agregar Tarea / Evaluacion</string>
    <string name="fechaEntrega">Fecha Entrega (dd/mm/aaaa)</string>


    <string name="nom">Nombre</string>
    <string name="apel">Apellido</string>
    <string name="enero">Genero</string>

    <string name="hoy">Tareas para hoy</string>

    <string name="TyC">Acepto los terminos y condiciones</string>

    <string name="titulo">Titulo.....</string>
    <string name="des">Descripcion.....</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="agProyeto">Agregar Proyecto</string>
    <string name="tipoTr">Tipo...</string>
    <string name="cantIntegrantes">Cantidad de integrantes</string>
    <string name="rutinas"> Mis rutinas</string>
    <string name="mNotas"> Mis Notas</string>
    <string name="nameR">Nombre de la Rutina</string>
    <string name="timeR">Tiempo de estudio: 0 min</string>
    <string name="timeDR">Tiempo de descanso: 0 min</string>
    <string name="interR">Intervalos de descanso: 0 </string>
    <string name="cronoR">00:00:00</string>
    <string name="btnInicio">Inicio</string>

    <string name="ingR">Ingrese Rutina de estudio</string>
    <string name="timeER2">Tiempo de estudio (min)</string>
    <string name="timeDR2">Tiempo de descanso (min)</string>
    <string name="cantR2">Cantidad de descanso </string>
    <string name="guardarR">Guardar rutina</string>


</resources>