<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AGtarea">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@color/gris"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="360dp"
            android:layout_height="86dp"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/contraseniaa"
            android:text="@string/agtarea"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.029" />

        <EditText
            android:id="@+id/tituloTr"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/titulo"
            android:inputType="text"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/FentregaTr"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/fechaEntrega"
            android:paddingLeft="10dp" />

        <Spinner
            android:id="@+id/spinnerTipo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:entries="@array/Tipo" />

        <Spinner
            android:id="@+id/spinner_ramos"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white" />

        <EditText
            android:id="@+id/descTr"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/des"
            android:inputType="textMultiLine"
            android:paddingLeft="10dp"
            android:paddingTop="5dp" />

        <Button
            android:id="@+id/btnIngresarTr"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/btnIngresar"
            android:textSize="16sp" />

    </LinearLayout>
</FrameLayout>