<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Registrarte">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="560dp"
        android:background="@color/gris"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/registro"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <EditText
            android:id="@+id/nomReg"
            style="Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/nom"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/apellidoReg"
            style="Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/apel"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/mailReg"
            style="Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/correo"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/contrasenaReg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/contraseniaa"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/btnIngresar"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>