<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".agRamo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar3"
            android:layout_width="361dp"
            android:layout_height="541dp"
            android:background="@color/gris"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.328" />

        <Button
            android:id="@+id/button14"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Colored"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginTop="44dp"
            android:background="@color/cyan"
            android:backgroundTint="@color/cyan"
            android:backgroundTintMode="add"
            android:fontFamily="@font/roboto_medium"
            android:onClick="login"
            android:text="@string/btnIngresar"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorLink="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.668" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="364dp"
            android:layout_height="46dp"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/contraseniaa"
            android:text="@string/agRamo"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.176" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/nmRamo"
            android:inputType="text"
            android:paddingLeft="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.291" />

        <EditText
            android:id="@+id/editTextText5"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/scRamo"
            android:inputType="text"
            android:paddingLeft="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.389" />

        <EditText
            android:id="@+id/editTextText6"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/prRamo"
            android:inputType="text"
            android:paddingLeft="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.478" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:background="@color/white"
            android:entries="@array/ramoTipo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.573" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>