<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    tools:context=".Agregar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="695dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar3"
            android:layout_width="403dp"
            android:layout_height="457dp"
            android:background="@color/gris"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.351" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="362dp"
            android:layout_height="81dp"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/contraseniaa"
            android:text="¿Que deseas agregar?"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.214" />

        <Button
            android:id="@+id/btnRamo"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Colored"
            android:layout_width="330dp"
            android:layout_height="70dp"
            android:background="@color/cyan"
            android:backgroundTint="@color/cyan"
            android:backgroundTintMode="add"
            android:fontFamily="@font/roboto_medium"
            android:hint="ffff"
            android:text="@string/Ramo"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorLink="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/materialToolbar3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.452" />

        <Button
            android:id="@+id/btnProyecto"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Colored"
            android:layout_width="330dp"
            android:layout_height="70dp"
            android:background="@color/cyan"
            android:backgroundTint="@color/cyan"
            android:backgroundTintMode="add"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/Proyecto"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorLink="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/materialToolbar3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRamo"
            app:layout_constraintVertical_bias="0.522" />

        <Button
            android:id="@+id/btnTarea"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Colored"
            android:layout_width="330dp"
            android:layout_height="70dp"
            android:background="@color/cyan"
            android:backgroundTint="@color/cyan"
            android:backgroundTintMode="add"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/tarea"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorLink="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/materialToolbar3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.626" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>